force-app/main/default/objects/Resume__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>This field will populate the top portion of the resume, which is a short introduction.</description>
    <label>Header</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>