force-app/main/default/objects/Resume__c/fields/Resume_Photo__c.field-meta.xml
<CustomField>
    <fullName>Resume_Photo__c</fullName>
    <label>Resume Photo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>