force-app/main/default/objects/Resume__c/fields/Tech_and_Tools__c.field-meta.xml
<CustomField>
    <fullName>Tech_and_Tools__c</fullName>
    <description>A comma separate list of the Tech and Tools that you are familiar with.</description>
    <inlineHelpText>Enter comma separated.</inlineHelpText>
    <label>Tech and Tools</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>